re PR tree-optimization/40792 (internal error in com_mpi.c at -O3 for gcc 4.4.0)

PR tree-optimization/40792
	* tree.c (build_function_type_skip_args): Remove bogus assert.

	* gcc.dg/pr40792.c: New test.

From-SVN: r149822